--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon core/server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,9 @@
     "http": "^0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
+    "os": "^0.1.2",
     "sequelize": "^6.37.3"
   }
 }
