--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,9 +15,11 @@
     "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
     "node-cron": "^3.0.3",
