--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "colors": "^1.4.0",
+    "commander": "^12.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
