--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,6 @@
 SECRET_KEY = 'Harsh123'
+DB_USERNAME = "root"
+DB_PASSWORD = "$Harsh12345"
+DB_NAME = "new_task_2"
+DB_HOST = "localhost"
+DIALECT = "mysql"
