--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+  "main": "./bin/framework.js",
+  "bin": {
+    "framework": "./bin/framework.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +26,8 @@
     "nodemon": "^3.1.0",
     "os": "^0.1.2",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "umzug": "^3.8.0",
+    "yargs": "^17.7.2"
   }
 }
