--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
     "node-cron": "^3.0.3",
